tests/programs/a1/local/invalid/InvalidNativeMethod.java
public class InvalidNativeMethod {
    public native void invalidNativeMethod();  // Native method must be static
}
